--- a/assets/css/instagram.css
+++ b/assets/css/instagram.css
@@ -20,6 +20,13 @@
     width: 313px;
     padding-bottom: 20px;
 }*/
-body { background: #cccccc;}
+body {background:url(../img/bglft.gif) repeat scroll -70% 0 #F0F0F0}
 .span3 {width: 317px;}
-.thumbnail { line-height: 0px;}
+.thumbnail { line-height: 0px;  background: none repeat scroll 0 0 #FFFFFF;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);}
+ 
+.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
+    width: 1071px;
+}
+.caption { min-height:150px;}
