--- a/assets/css/instagram.css
+++ b/assets/css/instagram.css
@@ -21,12 +21,22 @@
     padding-bottom: 20px;
 }*/
 body {background:url(../img/bglft.gif) repeat scroll -70% 0 #F0F0F0}
-.span3 {width: 317px;}
+.span3 {width: 237px;}
 .thumbnail { line-height: 0px;  background: none repeat scroll 0 0 #FFFFFF;
     border-radius: 3px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);}
  
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
-    width: 1071px;
+   width: 1098px;
 }
 .caption { min-height:150px;}
+
+a img { border:none; display:block;}
+img, video { max-width:100%;}
+
+.masthead { background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05);
+    border-radius: 0 0 6px 6px;
+    margin-top: -20px;
+    padding: 20px;
+    text-align: center;
+    width: auto;}
