--- a/assets/css/instagram.css
+++ b/assets/css/instagram.css
@@ -21,7 +21,7 @@
     padding-bottom: 20px;
 }*/
 body {background:url(../img/bglft.gif) repeat scroll -70% 0 #F0F0F0}
-.span3 {width: 237px;}
+.span3 {width: 237px; display:block;}
 .thumbnail { line-height: 0px;  background: none repeat scroll 0 0 #FFFFFF;
     border-radius: 3px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);}
@@ -34,9 +34,15 @@ body {background:url(../img/bglft.gif) repeat scroll -70% 0 #F0F0F0}
 a img { border:none; display:block;}
 img, video { max-width:100%;}
 
-.masthead { background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05);
+.masthead {  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05);
     border-radius: 0 0 6px 6px;
-    margin-top: -20px;
-    padding: 20px;
-    text-align: center;
-    width: auto;}
+    margin: 0 auto 20px;
+    padding: 5px 20px;
+    text-align: left;
+    width: 1030px;
+}
+
+h2 {font-size: 25px;}
+.reset-margin{
+    clear: both;
+}
