--- a/assets/css/instagram.css
+++ b/assets/css/instagram.css
@@ -1,67 +1,1 @@
-/*body {
-    padding-top: 20px;
-    padding-bottom: 60px;
-}
-
-
-.container {
-    margin: 0 auto;
-    max-width: 1000px;
-}
-.container > hr {
-    margin: 20px 0;
-}
-
-.reset-margin{
-    margin-left: 0px !important;
-    clear: both;
-}
-.span3.col-sm-6{
-    width: 313px;
-    padding-bottom: 20px;
-}*/
-body {background:url(../img/bglft.gif) repeat scroll -70% 0 #F0F0F0}
-.span3 {width: 237px; display:block;}
-.thumbnail { line-height: 0px;  background: none repeat scroll 0 0 #FFFFFF;
-    border-radius: 3px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07); padding: 7px;}
- 
-.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
-   width: 1098px;
-}
-.caption { min-height:150px;}
-
-a img { border:none; display:block;}
-.thumbnail img{ max-width:100%;}
-
-.masthead {  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05);
-    border-radius: 0 0 6px 6px;
-    margin: 0 auto 40px;
-    padding: 5px 20px;
-    text-align: left;
-    width: 1030px;
-    border-bottom: 1px solid #DDDDDD;
-    border-right: 1px solid #DDDDDD;
-    border-left: 1px solid #DDDDDD;
-}
-
-.footer {  /*background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05);
-    border-radius: 0 0 6px 6px;*/
-    color: #999999;
-    font-size: 12px;
-    margin: 0 auto 20px;
-    padding: 5px 20px;
-    text-align: left;
-    width: 1030px;
-    border-top: 1px solid #DDDDDD;
-
-}
-.footer p { margin: 0px;}
-h2 {font-size: 25px; }
-.caption h2 {font-size:16px; line-height: 16px; text-transform:capitalize;}
-.muted {color:#333333;}
-.reset-margin{
-clear: both;
-}
-
-.caption { padding: 10px 7px 0;}
+@charset "utf-8";/* Instagram CSS Document */body {background: url(../img/bglft.gif) repeat scroll -70% 0 #F0F0F0}.span3 {width: 237px;display: block;}.thumbnail {line-height: 0px;background: none repeat scroll 0 0 #FFFFFF;border-radius: 3px;box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);padding: 7px;}.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {width: 1098px;}.caption {min-height: 150px;}a img {border: none;display: block;}.thumbnail img {max-width: 100%;}.masthead {background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05);border-radius: 0 0 6px 6px;margin: 0 auto 40px;padding: 5px 20px;text-align: left;width: 1030px;border-bottom: 1px solid #DDDDDD;border-right: 1px solid #DDDDDD;border-left: 1px solid #DDDDDD;}.footer {color: #999999;font-size: 12px;margin: 0 auto 20px;padding: 5px 20px;text-align: left;width: 1030px;border-top: 1px solid #DDDDDD;}.footer p {margin: 0px;}h2 {font-size: 25px;}.caption h2 {font-size: 16px;line-height: 16px;text-transform: capitalize;}.muted {color: #333333;}.reset-margin {clear: both;}.caption {padding: 10px 7px 0;}
