--- a/assets/css/instagram.css
+++ b/assets/css/instagram.css
@@ -15,6 +15,12 @@ body {
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07);
 	padding: 7px;
 }
+
+.thumbnail:hover {
+	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+	box-shadow: 0 0 5px rgba(0,0,0,0.2);
+	}
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
 	width: 1098px;
 }
@@ -24,7 +30,9 @@ body {
 a img {
 	border: none;
 	display: block;
+	
 }
+
 .thumbnail img {
 	max-width: 100%;
 }
